@@ -407,12 +407,7 @@
     <jvm.args.memory>-Xms64m -Xmx1024m</jvm.args.memory>
     <jvm.args.debug></jvm.args.debug>
     <jvm.args.other>-server</jvm.args.other>
-    <jvm.args.jdk9>
-        --add-exports-private=java.base/java.lang=ALL-UNNAMED
-        --add-exports-private=java.base/java.security=ALL-UNNAMED
-        --add-exports-private=java.base/java.io=ALL-UNNAMED
-        --add-exports-private=java.base/java.util=ALL-UNNAMED
-    </jvm.args.jdk9>
+    <jvm.args.jdk9/>
 
     <!-- External dependencies versions -->
     <version.org.codehaus.mojo.findbugs-maven-plugin>3.0.1</version.org.codehaus.mojo.findbugs-maven-plugin>
@@ -466,7 +461,7 @@
     <version.com.sun.grizzly>1.9.59</version.com.sun.grizzly>
     <version.org.codehaus.jettison>1.3.4</version.org.codehaus.jettison>
     <version.junit>4.11</version.junit>
-    <version.org.jboss.byteman>4.0.0-BETA0</version.org.jboss.byteman>
+    <version.org.jboss.byteman>4.0.0-ALPHA</version.org.jboss.byteman>
     <version.org.wildfly.arquillian>2.0.0.Final</version.org.wildfly.arquillian>
     <version.org.jboss.arquillian.core>1.1.11.Final</version.org.jboss.arquillian.core>
     <version.org.jboss.arquillian.container.weld>1.0.0.CR9</version.org.jboss.arquillian.container.weld>
@@ -553,17 +548,38 @@
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-surefire-plugin</artifactId>
               <configuration combine.self="append">
-                  <forkMode>pertest</forkMode>
-                  <childDelegation>true</childDelegation>
-                  <reportsDirectory>${project.build.directory}/surefire-j9-reports</reportsDirectory>
-                  <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                <forkMode>pertest</forkMode>
+                <childDelegation>true</childDelegation>
+                <reportsDirectory>${project.build.directory}/surefire-j9-reports</reportsDirectory>
+                <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                <argLine>${jvm.args.jdk9}</argLine>
               </configuration>
+            </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-enforcer-plugin</artifactId>
+              <executions>
+                <execution>
+                <id>enforce-versions</id>
+                <goals>
+                  <goal>enforce</goal>
+                </goals>
+                <configuration>
+                  <rules>
+                    <requireJavaVersion>
+                      <version>1.9</version>
+                    </requireJavaVersion>
+                  </rules>
+                </configuration>
+                </execution>
+              </executions>
             </plugin>
           </plugins>
         </build>
         <properties>
           <maven.compiler.source>1.9</maven.compiler.source>
           <maven.compiler.target>1.9</maven.compiler.target>
+          <server.jvm.args>${jvm.args.other} ${jvm.args.byteman} ${jvm.args.memory} ${jvm.args.debug} ${jvm.args.jdk9}</server.jvm.args>
         </properties>
       </profile>
     <profile>
